--- a/更新日志.md
+++ b/更新日志.md
@@ -1,8 +1,17 @@
 2023.6
+0.2.1：
+<新增物品>
+饰品：
+ 神圣反击
+ 硬的心
+
+<机制优化>
+昧化以撒奖励模式提示
+——————————
+2023.6
 0.2.0：
 <新增角色>
 昧化抹大拉
-(目前除了角色解锁无其他成就)
 
 <新增物品>
 道具：
