--- a/内容概述.md
+++ b/内容概述.md
@@ -130,7 +130,9 @@ ibspocket 口袋消耗品
  可抵挡伤害，但不能作为生命值
  不会抵挡大部分自伤
  进入新房间时恢复20%，贪婪模式新波次则恢复15%
- 若承伤溢出，角色会在受到原伤害的基础上再受到半心伤害，并释放震荡波
+ 累计消耗20点后，触发受伤效果，获得额外的无敌时间，并释放震荡波
+ 耗尽时，释放震荡波
+ 若承伤溢出，角色会在受到原伤害的基础上再受到半心伤害
 
 坚贞之心上限：
  初始25，最高70，最低14
@@ -148,8 +150,7 @@ ibspocket 口袋消耗品
   杀死店长 + 5
 
 震荡波：
- 在坚贞之心承伤溢出时释放
- 震荡波可以摧毁障碍物和门(包括隐藏房洞口)
+ 震荡波可以摧毁障碍物、店长和门(包括隐藏房洞口)
  震荡波造成10点伤害
  震荡波次数和伤害有关
  震荡波范围和射程有关
