--- a/更新日志.md
+++ b/更新日志.md
@@ -1,4 +1,17 @@
 2023.7
+0.2.3：
+<新增物品>
+道具：
+ 奇怪的头骨
+ 以太之云
+ 魂火之灵
+
+<角色改动>
+昧化抹大拉：
+  累计消耗20点坚贞之心后，触发受伤效果，获得额外的无敌时间，并释放震荡波
+
+——————————
+2023.7
 0.2.2：
 <新增物品>
 道具：
