--- a/更新日志.md
+++ b/更新日志.md
@@ -1,4 +1,24 @@
 2023.7
+0.2.4：
+<新增物品>
+道具：
+ 节制之骨
+ 坚韧面具
+  美德七面骰
+
+<新增敌人>
+小Boss：坚韧
+
+<物品改动>
+已定义：可以选择传送至初始房间，不消耗充能
+
+<敌人改动>
+节制：
+ 掉落物改动
+ 死亡后会填满所有深坑
+
+——————————
+2023.7
 0.2.3：
 <新增物品>
 道具：
