--- a/内容概述.md
+++ b/内容概述.md
@@ -65,13 +65,14 @@ ibspocket 口袋消耗品
 
 
 角色
+(角色解锁无需困难模式，解锁树必须困难模式)
 ————————————
 “昧化以撒”
 
 <解锁方式>
-堕化以撒死在撒但房间后，使用以撒击败撒旦
-若新一轮使用的不是以撒，需要再次使用堕化以撒死亡
-以撒重新开局，不会中断可解锁状态
+表/里以撒死在撒但房间后，在新一轮击败撒旦
+若新一轮使用的不是表/里以撒，需要再次死亡
+表/里以撒重新开局，不会中断可解锁状态
 
 <游玩方式>
 以撒开局7秒内在无道具房间使用D6
@@ -103,13 +104,23 @@ ibspocket 口袋消耗品
 <长子名分>
 飞行
 恶魔/天使房中道具选择 + 1
+
+<解锁树>
+以撒+蓝人+撒旦+羔羊 = 酒瓶碎片
+超级撒旦 = 铜锌合金骰
+Boss车轮战+死寂 = 挑战"乾坤十掷"
+精神错乱 = 光辉六面骰
+见证者 = 爸爸的约定
+祸兽 = 拒绝选择
+贪婪模式 = 仰望星空 
+全标记 = 小Boss"节制"
 ——————
 “昧化抹大拉”
 
 <解锁方式>
-堕化抹大拉死在献祭房后，用抹大拉累计自伤27次
-若新一轮使用的不是抹大拉，需要再次使用堕化抹大拉死亡
-抹大拉重新开局，不会中断可解锁状态，累计自伤也会保存
+表/里抹大拉死在献祭房后，累计自伤27次
+若新一轮使用的不是表/里抹大拉，需要再次死亡
+表/里抹大拉重新开局，不会中断可解锁状态，累计自伤也会保存
 
 <游玩方式>
 抹大拉携带美味的心，任选其一：
@@ -157,6 +168,16 @@ ibspocket 口袋消耗品
 
 <长子名分>
 进入新房间或贪婪新波次，坚贞之心恢复量翻倍
+
+<解锁树>
+以撒+蓝人+撒旦+羔羊 = 神圣反击
+超级撒旦 = 金色祈者
+Boss车轮战+死寂 = 挑战"易碎品"
+精神错乱 = 发光的心
+见证者 = 硬的心
+祸兽 = 钻石
+贪婪模式 = 瓦伦丁巧克力
+全标记 = 小Boss"坚韧"
 ————————————
 
 
