--- a/更新日志.md
+++ b/更新日志.md
@@ -4,7 +4,7 @@
 道具：
  节制之骨
  坚韧面具
-  美德七面骰
+ 美德七面骰
 
 <新增敌人>
 小Boss：坚韧
@@ -17,6 +17,9 @@
  掉落物改动
  死亡后会填满所有深坑
 
+<机制改动>
+昧化以撒和昧化抹大拉的解锁可以由对应的任意表/里角色完成，无需分担对局
+使用表/里角色破坏镜子时，将提示对应昧化角色的解锁方式
 ——————————
 2023.7
 0.2.3：
