--- a/内容概述.md
+++ b/内容概述.md
@@ -66,6 +66,7 @@ ibspocket 口袋消耗品
 
 角色
 (角色解锁无需困难模式，解锁树必须困难模式)
+(处于可解锁角色状态，开局有音效提示)
 ————————————
 “昧化以撒”
 
@@ -218,4 +219,34 @@ Boss车轮战+死寂 = 挑战"易碎品"
 
 <通关奖励>
 昧化抹大拉初始坚贞之心上限提高2点
+————————————
+
+
+
+
+诅咒
+(默认开启，用模组配置菜单关闭)
+————————————
+“动人诅咒”
+"Curse of the Moving"
+
+角色每次停止移动达3秒，将受到半心伤害(从第四章开始为一心)，伤害不影响房率
+(温馨提示：日墙不算移动)
+——————
+“遗忘诅咒”
+"Curse of the Forgotten"
+
+重新进入房间时，其中的掉落物都有50%概率消失
+——————
+“七面骰诅咒”
+"Curse of D7"
+
+贪婪模式不会出现该诅咒
+清理房间后，有25%概率重置房间(可重复触发)
+——————
+“绑定诅咒”
+"Curse of the Binding"
+
+阻止角色拾取新的主动道具、饰品和口袋物品
+(温馨提示：饰品和口袋物品是可以丢的)
 ————————————
