--- a/更新日志.md
+++ b/更新日志.md
@@ -1,4 +1,21 @@
 2023.7
+0.2.5：
+<新增物品>
+道具：犹大福音
+
+<新增诅咒>
+(详见"内容概述.txt")
+动人诅咒
+遗忘诅咒
+七面骰诅咒
+绑定诅咒
+
+<物品改动>
+瓦伦丁巧克力：
+ 品质改为2
+ 在贪婪模式新波次刷新使用机会
+
+2023.7
 0.2.4：
 <新增物品>
 道具：
